<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/Choice1"
        android:icon="@drawable/share"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title="@string/choice1"/>

    <item android:id="@+id/Choice2"
        android:icon="@drawable/search"
        android:orderInCategory="2"
        app:showAsAction="always"
        android:title="@string/choice2"/>

    <item android:id="@+id/Choice3"
        android:icon="@drawable/refresh"
        android:orderInCategory="3"
        app:showAsAction="always"
        android:title="@string/choice3"/>

    <item android:id="@+id/MenuItems-overflow"
        app:showAsAction="never"
        android:title="@string/overflow"/>

</menu>