<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherForecast">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/weather"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weather"
        android:layout_alignParentCenter="true"
        android:id="@+id/current"
        android:text="@string/current_temp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_temp"
        android:layout_below="@+id/current"
        android:layout_alignParentLeft="true"
        android:id="@+id/min_temp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_temp"
        android:layout_below="@+id/min_temp"
        android:layout_alignParentLeft="true"
        android:id="@+id/max_temp"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uv"
        android:layout_below="@+id/max_temp"
        android:layout_alignParentLeft="true"
        android:id="@+id/UV"

        />



    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progress"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"
        />


</RelativeLayout>